--- a/todolist-frontend/src/AuthLayout.css
+++ b/todolist-frontend/src/AuthLayout.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
-  overflow: hidden; /* ẩn thanh cuộn */
+  overflow-x: hidden; /* chặn scroll ngang toàn trang */
   background-color: #af9595cc;
 }
 
